--- a/AIDL_example/app/src/main/AndroidManifest.xml
+++ b/AIDL_example/app/src/main/AndroidManifest.xml
@@ -15,6 +15,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service android:name=".BankService"
+            android:enabled="true"
+            android:exported="true"
+            android:process="cn.aigestudio.BinderServer">
+            <intent-filter>
+                <action android:name="cn.augest.test.aidl.bank"></action>
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
